# scraping_sample

./: .gitignore  Cargo.toml
djangomodel/: Cargo.toml
djangomodel/src/: main.rs
examples/: filter_by_bit_flags.js  judge_card_type.rs  macro_challenge.rs  parse_arts.rs  parse_arts_craft.rs  parse_key.rs  parse_key2.rs  parse_lrig.rs  parse_lrig_assist.rs  parse_piece.rs  parse_piece_relay.rs  parse_resona.rs  parse_resona_craft.rs  parse_signi.rs  parse_signi_dissona.rs  parse_signi_with_limit.rs  parse_spell.rs  parse_spell_craft.rs  parse_token.rs  parse_token2.rs  parse_token3.rs  print_features_as_b.rs  scrape.rs  scrape_single.rs  skill_damage.rs
scraping_sample/: Cargo.toml
scraping_sample/examples/: judge_card_type.rs  parse_key.rs  parse_key2.rs  parse_lrig.rs  parse_piece.rs  parse_resona.rs  parse_signi_with_limit.rs  parse_spell.rs  parse_token.rs  print_features_as_b.rs  scrape.rs  scrape_single.rs  skill_damage.rs
scraping_sample/src/wixoss/: constants.rs  mod.rs
scripts/: install-compose.txt
serde_django/: Cargo.toml
serde_django/src/: lib.rs
src/: lib.rs  scrape.rs
src/wixoss/: constants.rs  mod.rs
store/: .env  Cargo.toml
store/migrations/2023-10-04-071950_add_column_public/: down.sql  up.sql
store/src/: main.rs  schema.rs
web_server/: Cargo.toml
web_server/src/: main.rs
