[package]
name = "scraping_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["ws"] }
futures = "0.3.28"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
serde_qs = "0.12.0"
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.1", features = ["util"] }
axum-extra = { version = "0.7.4", features = ["cookie"] }
rand = "0.8.5"
uuid = { version = "1.4.0", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres"] }
hyper = "0.14.27"
bcrypt = "0.15.0"
reqwest = { version = "0.11.18", features = ["cookies", "multipart"] }
scraper = "0.17.1"
async-recursion = "1.0.4"