[package]
name = "store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx-cli = "0.7.2"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
diesel = "2.1.2"

[dependencies.sqlx]
version = "0.7.2"
features = ["runtime-tokio", "tls-rustls", "postgres"]
